--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.13.4",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -27,6 +30,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
